Disciplinas/2025.1/2025.1.COM/comp/trabalhoFinalOficial/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.0.2 from Parser.y
-----------------------------------------------------------------------------

state 101 contains 2 shift/reduce conflicts.
state 118 contains 4 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_eval -> Programa                            (0)
	Programa -> ListaFuncoes BlocoPrincipal            (1)
	Programa -> BlocoPrincipal                         (2)
	ListaFuncoes -> ListaFuncoes Funcao                (3)
	ListaFuncoes -> Funcao                             (4)
	Funcao -> TipoRetorno Id '(' DeclParametros ')' BlocoPrincipal   (5)
	Funcao -> TipoRetorno Id '(' ')' BlocoPrincipal    (6)
	TipoRetorno -> Tipo                                (7)
	TipoRetorno -> 'void'                              (8)
	DeclParametros -> DeclParametros ',' Parametro     (9)
	DeclParametros -> Parametro                        (10)
	Parametro -> Tipo Id                               (11)
	BlocoPrincipal -> '{' Declaracoes ListaCmd '}'     (12)
	BlocoPrincipal -> '{' ListaCmd '}'                 (13)
	Declaracoes -> Declaracoes Declaracao              (14)
	Declaracoes -> Declaracao                          (15)
	Declaracao -> Tipo ListaId ';'                     (16)
	Tipo -> 'int'                                      (17)
	Tipo -> 'string'                                   (18)
	Tipo -> 'double'                                   (19)
	ListaId -> ListaId ',' Id                          (20)
	ListaId -> Id                                      (21)
	Bloco -> '{' ListaCmd '}'                          (22)
	ListaCmd -> ListaCmd Comando                       (23)
	ListaCmd -> Comando                                (24)
	Comando -> CmdSe                                   (25)
	Comando -> CmdEnquanto                             (26)
	Comando -> CmdAtrib                                (27)
	Comando -> CmdEscrita                              (28)
	Comando -> CmdLeitura                              (29)
	Comando -> ChamadaProc                             (30)
	Comando -> Retorno                                 (31)
	Retorno -> 'return' ExpressaoAritimetica ';'       (32)
	Retorno -> 'return' Literal ';'                    (33)
	Retorno -> 'return' ';'                            (34)
	CmdSe -> 'if' '(' ExpressaoLogica ')' Bloco        (35)
	CmdSe -> 'if' '(' ExpressaoLogica ')' Bloco 'else' Bloco   (36)
	CmdEnquanto -> 'while' '(' ExpressaoLogica ')' Bloco   (37)
	CmdAtrib -> Id '=' ExpressaoAritimetica ';'        (38)
	CmdAtrib -> Id '=' Literal ';'                     (39)
	CmdEscrita -> 'print' '(' ExpressaoAritimetica ')' ';'   (40)
	CmdEscrita -> 'print' '(' Literal ')' ';'          (41)
	CmdLeitura -> 'read' '(' Id ')' ';'                (42)
	ChamadaProc -> ChamadaFuncao ';'                   (43)
	ChamadaFuncao -> Id '(' ListaParametros ')'        (44)
	ChamadaFuncao -> Id '(' ')'                        (45)
	ListaParametros -> ListaParametros ',' ExpressaoAritimetica   (46)
	ListaParametros -> ListaParametros ',' Literal     (47)
	ListaParametros -> ExpressaoAritimetica            (48)
	ListaParametros -> Literal                         (49)
	ExpressaoLogica -> ExpressaoLogica '&&' ExpressaoLogica   (50)
	ExpressaoLogica -> ExpressaoLogica '||' ExpressaoLogica   (51)
	ExpressaoLogica -> '!' ExpressaoLogica             (52)
	ExpressaoLogica -> '(' ExpressaoLogica ')'         (53)
	ExpressaoLogica -> ExpressaoRelacional             (54)
	ExpressaoRelacional -> ExpressaoAritimetica '>' ExpressaoAritimetica   (55)
	ExpressaoRelacional -> ExpressaoAritimetica '<' ExpressaoAritimetica   (56)
	ExpressaoRelacional -> ExpressaoAritimetica '>=' ExpressaoAritimetica   (57)
	ExpressaoRelacional -> ExpressaoAritimetica '<=' ExpressaoAritimetica   (58)
	ExpressaoRelacional -> ExpressaoAritimetica '==' ExpressaoAritimetica   (59)
	ExpressaoRelacional -> ExpressaoAritimetica '/=' ExpressaoAritimetica   (60)
	ExpressaoAritimetica -> '(' ExpressaoAritimetica ')'   (61)
	ExpressaoAritimetica -> ExpressaoAritimetica '+' ExpressaoAritimetica   (62)
	ExpressaoAritimetica -> ExpressaoAritimetica '-' ExpressaoAritimetica   (63)
	ExpressaoAritimetica -> ExpressaoAritimetica '*' ExpressaoAritimetica   (64)
	ExpressaoAritimetica -> ExpressaoAritimetica '/' ExpressaoAritimetica   (65)
	ExpressaoAritimetica -> Int                        (66)
	ExpressaoAritimetica -> Double                     (67)
	ExpressaoAritimetica -> Id                         (68)
	ExpressaoAritimetica -> ChamadaFuncao              (69)
	ExpressaoAritimetica -> '(' 'int' ')' ExpressaoAritimetica   (70)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'int'          { INT }
	'double'       { DOUBLE }
	'string'       { STRING }
	'void'         { VOID }
	'('            { LPAR }
	')'            { RPAR }
	'{'            { LCURL }
	'}'            { RCURL }
	','            { COMMA }
	';'            { SEMICOLON }
	'return'       { RETURN }
	'if'           { IF }
	'else'         { ELSE }
	'while'        { WHILE }
	'='            { ATRIBUTION }
	'print'        { PRINT }
	'read'         { READ }
	'+'            { ADD }
	'-'            { SUB }
	'*'            { MUL }
	'/'            { DIV }
	'&&'           { AND }
	'||'           { OR }
	'!'            { NOT }
	'=='           { EQUAL }
	'/='           { NOT_EQUAL }
	'>='           { GREATER_THAN_EQUAL }
	'<='           { LESS_THAN_EQUAL }
	'>'            { GREATER_THAN }
	'<'            { LESS_THAN }
	Id             { CONST_ID $$ }
	Int            { CONST_INT $$ }
	Double         { CONST_DOUBLE $$ }
	Literal        { CONST_LITERAL $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_eval     rule  0
	Programa        rules 1, 2
	ListaFuncoes    rules 3, 4
	Funcao          rules 5, 6
	TipoRetorno     rules 7, 8
	DeclParametros  rules 9, 10
	Parametro       rule  11
	BlocoPrincipal  rules 12, 13
	Declaracoes     rules 14, 15
	Declaracao      rule  16
	Tipo            rules 17, 18, 19
	ListaId         rules 20, 21
	Bloco           rule  22
	ListaCmd        rules 23, 24
	Comando         rules 25, 26, 27, 28, 29, 30, 31
	Retorno         rules 32, 33, 34
	CmdSe           rules 35, 36
	CmdEnquanto     rule  37
	CmdAtrib        rules 38, 39
	CmdEscrita      rules 40, 41
	CmdLeitura      rule  42
	ChamadaProc     rule  43
	ChamadaFuncao   rules 44, 45
	ListaParametros rules 46, 47, 48, 49
	ExpressaoLogica rules 50, 51, 52, 53, 54
	ExpressaoRelacional rules 55, 56, 57, 58, 59, 60
	ExpressaoAritimetica rules 61, 62, 63, 64, 65, 66, 67, 68, 69, 70

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_eval -> . Programa                           (rule 0)

	'int'          shift, and enter state 6
	'double'       shift, and enter state 7
	'string'       shift, and enter state 8
	'void'         shift, and enter state 9
	'{'            shift, and enter state 12

	Programa       goto state 10
	ListaFuncoes   goto state 2
	Funcao         goto state 3
	TipoRetorno    goto state 4
	BlocoPrincipal goto state 11
	Tipo           goto state 5

State 1

	Programa -> . ListaFuncoes BlocoPrincipal           (rule 1)

	'int'          shift, and enter state 6
	'double'       shift, and enter state 7
	'string'       shift, and enter state 8
	'void'         shift, and enter state 9

	ListaFuncoes   goto state 2
	Funcao         goto state 3
	TipoRetorno    goto state 4
	Tipo           goto state 5

State 2

	Programa -> ListaFuncoes . BlocoPrincipal           (rule 1)
	ListaFuncoes -> ListaFuncoes . Funcao               (rule 3)

	'int'          shift, and enter state 6
	'double'       shift, and enter state 7
	'string'       shift, and enter state 8
	'void'         shift, and enter state 9
	'{'            shift, and enter state 12

	Funcao         goto state 33
	TipoRetorno    goto state 4
	BlocoPrincipal goto state 34
	Tipo           goto state 5

State 3

	ListaFuncoes -> Funcao .                            (rule 4)

	'int'          reduce using rule 4
	'double'       reduce using rule 4
	'string'       reduce using rule 4
	'void'         reduce using rule 4
	'{'            reduce using rule 4


State 4

	Funcao -> TipoRetorno . Id '(' DeclParametros ')' BlocoPrincipal    (rule 5)
	Funcao -> TipoRetorno . Id '(' ')' BlocoPrincipal    (rule 6)

	Id             shift, and enter state 32


State 5

	TipoRetorno -> Tipo .                               (rule 7)

	Id             reduce using rule 7


State 6

	Tipo -> 'int' .                                     (rule 17)

	Id             reduce using rule 17


State 7

	Tipo -> 'double' .                                  (rule 19)

	Id             reduce using rule 19


State 8

	Tipo -> 'string' .                                  (rule 18)

	Id             reduce using rule 18


State 9

	TipoRetorno -> 'void' .                             (rule 8)

	Id             reduce using rule 8


State 10

	%start_eval -> Programa .                           (rule 0)

	%eof           accept


State 11

	Programa -> BlocoPrincipal .                        (rule 2)

	%eof           reduce using rule 2


State 12

	BlocoPrincipal -> '{' . Declaracoes ListaCmd '}'    (rule 12)
	BlocoPrincipal -> '{' . ListaCmd '}'                (rule 13)

	'int'          shift, and enter state 6
	'double'       shift, and enter state 7
	'string'       shift, and enter state 8
	'return'       shift, and enter state 26
	'if'           shift, and enter state 27
	'while'        shift, and enter state 28
	'print'        shift, and enter state 29
	'read'         shift, and enter state 30
	Id             shift, and enter state 31

	Declaracoes    goto state 13
	Declaracao     goto state 14
	Tipo           goto state 15
	ListaCmd       goto state 16
	Comando        goto state 17
	Retorno        goto state 18
	CmdSe          goto state 19
	CmdEnquanto    goto state 20
	CmdAtrib       goto state 21
	CmdEscrita     goto state 22
	CmdLeitura     goto state 23
	ChamadaProc    goto state 24
	ChamadaFuncao  goto state 25

State 13

	BlocoPrincipal -> '{' Declaracoes . ListaCmd '}'    (rule 12)
	Declaracoes -> Declaracoes . Declaracao             (rule 14)

	'int'          shift, and enter state 6
	'double'       shift, and enter state 7
	'string'       shift, and enter state 8
	'return'       shift, and enter state 26
	'if'           shift, and enter state 27
	'while'        shift, and enter state 28
	'print'        shift, and enter state 29
	'read'         shift, and enter state 30
	Id             shift, and enter state 31

	Declaracao     goto state 55
	Tipo           goto state 15
	ListaCmd       goto state 56
	Comando        goto state 17
	Retorno        goto state 18
	CmdSe          goto state 19
	CmdEnquanto    goto state 20
	CmdAtrib       goto state 21
	CmdEscrita     goto state 22
	CmdLeitura     goto state 23
	ChamadaProc    goto state 24
	ChamadaFuncao  goto state 25

State 14

	Declaracoes -> Declaracao .                         (rule 15)

	'int'          reduce using rule 15
	'double'       reduce using rule 15
	'string'       reduce using rule 15
	'return'       reduce using rule 15
	'if'           reduce using rule 15
	'while'        reduce using rule 15
	'print'        reduce using rule 15
	'read'         reduce using rule 15
	Id             reduce using rule 15


State 15

	Declaracao -> Tipo . ListaId ';'                    (rule 16)

	Id             shift, and enter state 54

	ListaId        goto state 53

State 16

	BlocoPrincipal -> '{' ListaCmd . '}'                (rule 13)
	ListaCmd -> ListaCmd . Comando                      (rule 23)

	'}'            shift, and enter state 52
	'return'       shift, and enter state 26
	'if'           shift, and enter state 27
	'while'        shift, and enter state 28
	'print'        shift, and enter state 29
	'read'         shift, and enter state 30
	Id             shift, and enter state 31

	Comando        goto state 51
	Retorno        goto state 18
	CmdSe          goto state 19
	CmdEnquanto    goto state 20
	CmdAtrib       goto state 21
	CmdEscrita     goto state 22
	CmdLeitura     goto state 23
	ChamadaProc    goto state 24
	ChamadaFuncao  goto state 25

State 17

	ListaCmd -> Comando .                               (rule 24)

	'}'            reduce using rule 24
	'return'       reduce using rule 24
	'if'           reduce using rule 24
	'while'        reduce using rule 24
	'print'        reduce using rule 24
	'read'         reduce using rule 24
	Id             reduce using rule 24


State 18

	Comando -> Retorno .                                (rule 31)

	'}'            reduce using rule 31
	'return'       reduce using rule 31
	'if'           reduce using rule 31
	'while'        reduce using rule 31
	'print'        reduce using rule 31
	'read'         reduce using rule 31
	Id             reduce using rule 31


State 19

	Comando -> CmdSe .                                  (rule 25)

	'}'            reduce using rule 25
	'return'       reduce using rule 25
	'if'           reduce using rule 25
	'while'        reduce using rule 25
	'print'        reduce using rule 25
	'read'         reduce using rule 25
	Id             reduce using rule 25


State 20

	Comando -> CmdEnquanto .                            (rule 26)

	'}'            reduce using rule 26
	'return'       reduce using rule 26
	'if'           reduce using rule 26
	'while'        reduce using rule 26
	'print'        reduce using rule 26
	'read'         reduce using rule 26
	Id             reduce using rule 26


State 21

	Comando -> CmdAtrib .                               (rule 27)

	'}'            reduce using rule 27
	'return'       reduce using rule 27
	'if'           reduce using rule 27
	'while'        reduce using rule 27
	'print'        reduce using rule 27
	'read'         reduce using rule 27
	Id             reduce using rule 27


State 22

	Comando -> CmdEscrita .                             (rule 28)

	'}'            reduce using rule 28
	'return'       reduce using rule 28
	'if'           reduce using rule 28
	'while'        reduce using rule 28
	'print'        reduce using rule 28
	'read'         reduce using rule 28
	Id             reduce using rule 28


State 23

	Comando -> CmdLeitura .                             (rule 29)

	'}'            reduce using rule 29
	'return'       reduce using rule 29
	'if'           reduce using rule 29
	'while'        reduce using rule 29
	'print'        reduce using rule 29
	'read'         reduce using rule 29
	Id             reduce using rule 29


State 24

	Comando -> ChamadaProc .                            (rule 30)

	'}'            reduce using rule 30
	'return'       reduce using rule 30
	'if'           reduce using rule 30
	'while'        reduce using rule 30
	'print'        reduce using rule 30
	'read'         reduce using rule 30
	Id             reduce using rule 30


State 25

	ChamadaProc -> ChamadaFuncao . ';'                  (rule 43)

	';'            shift, and enter state 50


State 26

	Retorno -> 'return' . ExpressaoAritimetica ';'      (rule 32)
	Retorno -> 'return' . Literal ';'                   (rule 33)
	Retorno -> 'return' . ';'                           (rule 34)

	'('            shift, and enter state 44
	';'            shift, and enter state 45
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48
	Literal        shift, and enter state 49

	ChamadaFuncao  goto state 42
	ExpressaoAritimeticagoto state 43

State 27

	CmdSe -> 'if' . '(' ExpressaoLogica ')' Bloco       (rule 35)
	CmdSe -> 'if' . '(' ExpressaoLogica ')' Bloco 'else' Bloco    (rule 36)

	'('            shift, and enter state 41


State 28

	CmdEnquanto -> 'while' . '(' ExpressaoLogica ')' Bloco    (rule 37)

	'('            shift, and enter state 40


State 29

	CmdEscrita -> 'print' . '(' ExpressaoAritimetica ')' ';'    (rule 40)
	CmdEscrita -> 'print' . '(' Literal ')' ';'         (rule 41)

	'('            shift, and enter state 39


State 30

	CmdLeitura -> 'read' . '(' Id ')' ';'               (rule 42)

	'('            shift, and enter state 38


State 31

	CmdAtrib -> Id . '=' ExpressaoAritimetica ';'       (rule 38)
	CmdAtrib -> Id . '=' Literal ';'                    (rule 39)
	ChamadaFuncao -> Id . '(' ListaParametros ')'       (rule 44)
	ChamadaFuncao -> Id . '(' ')'                       (rule 45)

	'('            shift, and enter state 36
	'='            shift, and enter state 37


State 32

	Funcao -> TipoRetorno Id . '(' DeclParametros ')' BlocoPrincipal    (rule 5)
	Funcao -> TipoRetorno Id . '(' ')' BlocoPrincipal    (rule 6)

	'('            shift, and enter state 35


State 33

	ListaFuncoes -> ListaFuncoes Funcao .               (rule 3)

	'int'          reduce using rule 3
	'double'       reduce using rule 3
	'string'       reduce using rule 3
	'void'         reduce using rule 3
	'{'            reduce using rule 3


State 34

	Programa -> ListaFuncoes BlocoPrincipal .           (rule 1)

	%eof           reduce using rule 1


State 35

	Funcao -> TipoRetorno Id '(' . DeclParametros ')' BlocoPrincipal    (rule 5)
	Funcao -> TipoRetorno Id '(' . ')' BlocoPrincipal    (rule 6)

	'int'          shift, and enter state 6
	'double'       shift, and enter state 7
	'string'       shift, and enter state 8
	')'            shift, and enter state 86

	DeclParametros goto state 83
	Parametro      goto state 84
	Tipo           goto state 85

State 36

	ChamadaFuncao -> Id '(' . ListaParametros ')'       (rule 44)
	ChamadaFuncao -> Id '(' . ')'                       (rule 45)

	'('            shift, and enter state 44
	')'            shift, and enter state 81
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48
	Literal        shift, and enter state 82

	ChamadaFuncao  goto state 42
	ListaParametrosgoto state 79
	ExpressaoAritimeticagoto state 80

State 37

	CmdAtrib -> Id '=' . ExpressaoAritimetica ';'       (rule 38)
	CmdAtrib -> Id '=' . Literal ';'                    (rule 39)

	'('            shift, and enter state 44
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48
	Literal        shift, and enter state 78

	ChamadaFuncao  goto state 42
	ExpressaoAritimeticagoto state 77

State 38

	CmdLeitura -> 'read' '(' . Id ')' ';'               (rule 42)

	Id             shift, and enter state 76


State 39

	CmdEscrita -> 'print' '(' . ExpressaoAritimetica ')' ';'    (rule 40)
	CmdEscrita -> 'print' '(' . Literal ')' ';'         (rule 41)

	'('            shift, and enter state 44
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48
	Literal        shift, and enter state 75

	ChamadaFuncao  goto state 42
	ExpressaoAritimeticagoto state 74

State 40

	CmdEnquanto -> 'while' '(' . ExpressaoLogica ')' Bloco    (rule 37)

	'('            shift, and enter state 71
	'!'            shift, and enter state 72
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48

	ChamadaFuncao  goto state 42
	ExpressaoLogicagoto state 73
	ExpressaoRelacionalgoto state 69
	ExpressaoAritimeticagoto state 70

State 41

	CmdSe -> 'if' '(' . ExpressaoLogica ')' Bloco       (rule 35)
	CmdSe -> 'if' '(' . ExpressaoLogica ')' Bloco 'else' Bloco    (rule 36)

	'('            shift, and enter state 71
	'!'            shift, and enter state 72
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48

	ChamadaFuncao  goto state 42
	ExpressaoLogicagoto state 68
	ExpressaoRelacionalgoto state 69
	ExpressaoAritimeticagoto state 70

State 42

	ExpressaoAritimetica -> ChamadaFuncao .             (rule 69)

	')'            reduce using rule 69
	','            reduce using rule 69
	';'            reduce using rule 69
	'+'            reduce using rule 69
	'-'            reduce using rule 69
	'*'            reduce using rule 69
	'/'            reduce using rule 69
	'&&'           reduce using rule 69
	'||'           reduce using rule 69
	'=='           reduce using rule 69
	'/='           reduce using rule 69
	'>='           reduce using rule 69
	'<='           reduce using rule 69
	'>'            reduce using rule 69
	'<'            reduce using rule 69


State 43

	Retorno -> 'return' ExpressaoAritimetica . ';'      (rule 32)
	ExpressaoAritimetica -> ExpressaoAritimetica . '+' ExpressaoAritimetica    (rule 62)
	ExpressaoAritimetica -> ExpressaoAritimetica . '-' ExpressaoAritimetica    (rule 63)
	ExpressaoAritimetica -> ExpressaoAritimetica . '*' ExpressaoAritimetica    (rule 64)
	ExpressaoAritimetica -> ExpressaoAritimetica . '/' ExpressaoAritimetica    (rule 65)

	';'            shift, and enter state 63
	'+'            shift, and enter state 64
	'-'            shift, and enter state 65
	'*'            shift, and enter state 66
	'/'            shift, and enter state 67


State 44

	ExpressaoAritimetica -> '(' . ExpressaoAritimetica ')'    (rule 61)
	ExpressaoAritimetica -> '(' . 'int' ')' ExpressaoAritimetica    (rule 70)

	'int'          shift, and enter state 62
	'('            shift, and enter state 44
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48

	ChamadaFuncao  goto state 42
	ExpressaoAritimeticagoto state 61

State 45

	Retorno -> 'return' ';' .                           (rule 34)

	'}'            reduce using rule 34
	'return'       reduce using rule 34
	'if'           reduce using rule 34
	'while'        reduce using rule 34
	'print'        reduce using rule 34
	'read'         reduce using rule 34
	Id             reduce using rule 34


State 46

	ChamadaFuncao -> Id . '(' ListaParametros ')'       (rule 44)
	ChamadaFuncao -> Id . '(' ')'                       (rule 45)
	ExpressaoAritimetica -> Id .                        (rule 68)

	'('            shift, and enter state 36
	')'            reduce using rule 68
	','            reduce using rule 68
	';'            reduce using rule 68
	'+'            reduce using rule 68
	'-'            reduce using rule 68
	'*'            reduce using rule 68
	'/'            reduce using rule 68
	'&&'           reduce using rule 68
	'||'           reduce using rule 68
	'=='           reduce using rule 68
	'/='           reduce using rule 68
	'>='           reduce using rule 68
	'<='           reduce using rule 68
	'>'            reduce using rule 68
	'<'            reduce using rule 68


State 47

	ExpressaoAritimetica -> Int .                       (rule 66)

	')'            reduce using rule 66
	','            reduce using rule 66
	';'            reduce using rule 66
	'+'            reduce using rule 66
	'-'            reduce using rule 66
	'*'            reduce using rule 66
	'/'            reduce using rule 66
	'&&'           reduce using rule 66
	'||'           reduce using rule 66
	'=='           reduce using rule 66
	'/='           reduce using rule 66
	'>='           reduce using rule 66
	'<='           reduce using rule 66
	'>'            reduce using rule 66
	'<'            reduce using rule 66


State 48

	ExpressaoAritimetica -> Double .                    (rule 67)

	')'            reduce using rule 67
	','            reduce using rule 67
	';'            reduce using rule 67
	'+'            reduce using rule 67
	'-'            reduce using rule 67
	'*'            reduce using rule 67
	'/'            reduce using rule 67
	'&&'           reduce using rule 67
	'||'           reduce using rule 67
	'=='           reduce using rule 67
	'/='           reduce using rule 67
	'>='           reduce using rule 67
	'<='           reduce using rule 67
	'>'            reduce using rule 67
	'<'            reduce using rule 67


State 49

	Retorno -> 'return' Literal . ';'                   (rule 33)

	';'            shift, and enter state 60


State 50

	ChamadaProc -> ChamadaFuncao ';' .                  (rule 43)

	'}'            reduce using rule 43
	'return'       reduce using rule 43
	'if'           reduce using rule 43
	'while'        reduce using rule 43
	'print'        reduce using rule 43
	'read'         reduce using rule 43
	Id             reduce using rule 43


State 51

	ListaCmd -> ListaCmd Comando .                      (rule 23)

	'}'            reduce using rule 23
	'return'       reduce using rule 23
	'if'           reduce using rule 23
	'while'        reduce using rule 23
	'print'        reduce using rule 23
	'read'         reduce using rule 23
	Id             reduce using rule 23


State 52

	BlocoPrincipal -> '{' ListaCmd '}' .                (rule 13)

	'int'          reduce using rule 13
	'double'       reduce using rule 13
	'string'       reduce using rule 13
	'void'         reduce using rule 13
	'{'            reduce using rule 13
	%eof           reduce using rule 13


State 53

	Declaracao -> Tipo ListaId . ';'                    (rule 16)
	ListaId -> ListaId . ',' Id                         (rule 20)

	','            shift, and enter state 58
	';'            shift, and enter state 59


State 54

	ListaId -> Id .                                     (rule 21)

	','            reduce using rule 21
	';'            reduce using rule 21


State 55

	Declaracoes -> Declaracoes Declaracao .             (rule 14)

	'int'          reduce using rule 14
	'double'       reduce using rule 14
	'string'       reduce using rule 14
	'return'       reduce using rule 14
	'if'           reduce using rule 14
	'while'        reduce using rule 14
	'print'        reduce using rule 14
	'read'         reduce using rule 14
	Id             reduce using rule 14


State 56

	BlocoPrincipal -> '{' Declaracoes ListaCmd . '}'    (rule 12)
	ListaCmd -> ListaCmd . Comando                      (rule 23)

	'}'            shift, and enter state 57
	'return'       shift, and enter state 26
	'if'           shift, and enter state 27
	'while'        shift, and enter state 28
	'print'        shift, and enter state 29
	'read'         shift, and enter state 30
	Id             shift, and enter state 31

	Comando        goto state 51
	Retorno        goto state 18
	CmdSe          goto state 19
	CmdEnquanto    goto state 20
	CmdAtrib       goto state 21
	CmdEscrita     goto state 22
	CmdLeitura     goto state 23
	ChamadaProc    goto state 24
	ChamadaFuncao  goto state 25

State 57

	BlocoPrincipal -> '{' Declaracoes ListaCmd '}' .    (rule 12)

	'int'          reduce using rule 12
	'double'       reduce using rule 12
	'string'       reduce using rule 12
	'void'         reduce using rule 12
	'{'            reduce using rule 12
	%eof           reduce using rule 12


State 58

	ListaId -> ListaId ',' . Id                         (rule 20)

	Id             shift, and enter state 117


State 59

	Declaracao -> Tipo ListaId ';' .                    (rule 16)

	'int'          reduce using rule 16
	'double'       reduce using rule 16
	'string'       reduce using rule 16
	'return'       reduce using rule 16
	'if'           reduce using rule 16
	'while'        reduce using rule 16
	'print'        reduce using rule 16
	'read'         reduce using rule 16
	Id             reduce using rule 16


State 60

	Retorno -> 'return' Literal ';' .                   (rule 33)

	'}'            reduce using rule 33
	'return'       reduce using rule 33
	'if'           reduce using rule 33
	'while'        reduce using rule 33
	'print'        reduce using rule 33
	'read'         reduce using rule 33
	Id             reduce using rule 33


State 61

	ExpressaoAritimetica -> '(' ExpressaoAritimetica . ')'    (rule 61)
	ExpressaoAritimetica -> ExpressaoAritimetica . '+' ExpressaoAritimetica    (rule 62)
	ExpressaoAritimetica -> ExpressaoAritimetica . '-' ExpressaoAritimetica    (rule 63)
	ExpressaoAritimetica -> ExpressaoAritimetica . '*' ExpressaoAritimetica    (rule 64)
	ExpressaoAritimetica -> ExpressaoAritimetica . '/' ExpressaoAritimetica    (rule 65)

	')'            shift, and enter state 116
	'+'            shift, and enter state 64
	'-'            shift, and enter state 65
	'*'            shift, and enter state 66
	'/'            shift, and enter state 67


State 62

	ExpressaoAritimetica -> '(' 'int' . ')' ExpressaoAritimetica    (rule 70)

	')'            shift, and enter state 115


State 63

	Retorno -> 'return' ExpressaoAritimetica ';' .      (rule 32)

	'}'            reduce using rule 32
	'return'       reduce using rule 32
	'if'           reduce using rule 32
	'while'        reduce using rule 32
	'print'        reduce using rule 32
	'read'         reduce using rule 32
	Id             reduce using rule 32


State 64

	ExpressaoAritimetica -> ExpressaoAritimetica '+' . ExpressaoAritimetica    (rule 62)

	'('            shift, and enter state 44
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48

	ChamadaFuncao  goto state 42
	ExpressaoAritimeticagoto state 114

State 65

	ExpressaoAritimetica -> ExpressaoAritimetica '-' . ExpressaoAritimetica    (rule 63)

	'('            shift, and enter state 44
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48

	ChamadaFuncao  goto state 42
	ExpressaoAritimeticagoto state 113

State 66

	ExpressaoAritimetica -> ExpressaoAritimetica '*' . ExpressaoAritimetica    (rule 64)

	'('            shift, and enter state 44
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48

	ChamadaFuncao  goto state 42
	ExpressaoAritimeticagoto state 112

State 67

	ExpressaoAritimetica -> ExpressaoAritimetica '/' . ExpressaoAritimetica    (rule 65)

	'('            shift, and enter state 44
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48

	ChamadaFuncao  goto state 42
	ExpressaoAritimeticagoto state 111

State 68

	CmdSe -> 'if' '(' ExpressaoLogica . ')' Bloco       (rule 35)
	CmdSe -> 'if' '(' ExpressaoLogica . ')' Bloco 'else' Bloco    (rule 36)
	ExpressaoLogica -> ExpressaoLogica . '&&' ExpressaoLogica    (rule 50)
	ExpressaoLogica -> ExpressaoLogica . '||' ExpressaoLogica    (rule 51)

	')'            shift, and enter state 110
	'&&'           shift, and enter state 99
	'||'           shift, and enter state 100


State 69

	ExpressaoLogica -> ExpressaoRelacional .            (rule 54)

	')'            reduce using rule 54
	'&&'           reduce using rule 54
	'||'           reduce using rule 54


State 70

	ExpressaoRelacional -> ExpressaoAritimetica . '>' ExpressaoAritimetica    (rule 55)
	ExpressaoRelacional -> ExpressaoAritimetica . '<' ExpressaoAritimetica    (rule 56)
	ExpressaoRelacional -> ExpressaoAritimetica . '>=' ExpressaoAritimetica    (rule 57)
	ExpressaoRelacional -> ExpressaoAritimetica . '<=' ExpressaoAritimetica    (rule 58)
	ExpressaoRelacional -> ExpressaoAritimetica . '==' ExpressaoAritimetica    (rule 59)
	ExpressaoRelacional -> ExpressaoAritimetica . '/=' ExpressaoAritimetica    (rule 60)
	ExpressaoAritimetica -> ExpressaoAritimetica . '+' ExpressaoAritimetica    (rule 62)
	ExpressaoAritimetica -> ExpressaoAritimetica . '-' ExpressaoAritimetica    (rule 63)
	ExpressaoAritimetica -> ExpressaoAritimetica . '*' ExpressaoAritimetica    (rule 64)
	ExpressaoAritimetica -> ExpressaoAritimetica . '/' ExpressaoAritimetica    (rule 65)

	'+'            shift, and enter state 64
	'-'            shift, and enter state 65
	'*'            shift, and enter state 66
	'/'            shift, and enter state 67
	'=='           shift, and enter state 104
	'/='           shift, and enter state 105
	'>='           shift, and enter state 106
	'<='           shift, and enter state 107
	'>'            shift, and enter state 108
	'<'            shift, and enter state 109


State 71

	ExpressaoLogica -> '(' . ExpressaoLogica ')'        (rule 53)
	ExpressaoAritimetica -> '(' . ExpressaoAritimetica ')'    (rule 61)
	ExpressaoAritimetica -> '(' . 'int' ')' ExpressaoAritimetica    (rule 70)

	'int'          shift, and enter state 62
	'('            shift, and enter state 71
	'!'            shift, and enter state 72
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48

	ChamadaFuncao  goto state 42
	ExpressaoLogicagoto state 102
	ExpressaoRelacionalgoto state 69
	ExpressaoAritimeticagoto state 103

State 72

	ExpressaoLogica -> '!' . ExpressaoLogica            (rule 52)

	'('            shift, and enter state 71
	'!'            shift, and enter state 72
	Id             shift, and enter state 46
	Int            shift, and enter state 47
	Double         shift, and enter state 48

	ChamadaFuncao  goto state 42
	ExpressaoLogicagoto state 101
	ExpressaoRelacionalgoto state 69
	ExpressaoAritimeticagoto state 70

State 73

	CmdEnquanto -> 'while' '(' ExpressaoLogica . ')' Bloco    (rule 37)
	ExpressaoLogica -> ExpressaoLogica . '&&' ExpressaoLogica    (rule 50)
	ExpressaoLogica -> ExpressaoLogica . '||' ExpressaoLogica    (rule 51)
